--- a/kazuma_2.css
+++ b/kazuma_2.css
@@ -33,7 +33,7 @@ img {
     text-align: center;
     width: 90%;
     max-width: 300px;
-    margin: 120px auto 20px auto;
+    margin: 120px 120px 20px auto;
     background-color: forestgreen;
     height: auto;
     border-radius: 10%;
